--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+env_logger = "0.11"
+log = "0.4"
+parking_lot = "0.12"
+winit = "0.30"
+wgpu = "26"
+# 若是单独运行本章demo，需要再添加以下依赖
+pollster = "0.4.0"  # 用于阻塞运行异步代码
